Updated deprecated code (resolved warning)